# silicium

./: .gitignore  .neoconf.json  LICENSE-MIT  Makefile  README.md  bochs.bxrc  bochsd.bxrc  l
kernel/: Cargo.toml  Makefile  link.ld  rustfmt.toml
kernel/.cargo/: config.toml
kernel/arch/: Makefile
kernel/arch/silicium-arch/: Cargo.toml
kernel/arch/silicium-arch-example/: Cargo.toml
kernel/arch/silicium-arch-example/src/: irq.rs  lang.rs  lib.rs  log.rs  paging.rs  percpu.rs  physical.rs
kernel/arch/silicium-arch-requirements/: Cargo.toml
kernel/arch/silicium-arch-requirements/src/: lang.rs  paging.rs  physical.rs
kernel/arch/silicium-arch/src/: lib.rs
kernel/arch/silicium-arch/src/x86_64/: lang.rs  mod.rs  paging.rs  physical.rs
kernel/arch/silicium-hal/: Cargo.toml
kernel/arch/silicium-hal/src/: lib.rs
kernel/arch/silicium-hal/src/x86_64/: cpu.rs  irq.rs  log.rs  mod.rs  paging.rs  percpu.rs
kernel/arch/silicium-x86_64/: Cargo.toml
kernel/arch/silicium-x86_64/crates/silicium-addr/: Cargo.toml
kernel/arch/silicium-x86_64/macros/: Cargo.toml
kernel/arch/silicium-x86_64/macros/src/: lib.rs
kernel/arch/silicium-x86_64/src/: boot.rs  bump.rs  cpu.rs  exception.rs  gdt.rs  idt.rs  io.rs  irq.rs  lang.rs  lib.rs  msr.rs  opcode.rs  percpu.rs  physical.rs  pic.rs  pit.rs  serial.rs  simd.rs  smp.rs  thread.rs  tsc.rs  tss.rs
kernel/arch/silicium-x86_64/src/apic/: io.rs  local.rs  mod.rs
kernel/arch/silicium-x86_64/src/asm/: interrupt.asm  selectors.asm
kernel/arch/silicium-x86_64/src/cpu/: cpuid.rs  cr0.rs  cr4.rs  eflags.rs  mod.rs  xcr0.rs
kernel/arch/silicium-x86_64/src/paging/: mod.rs  page.rs  pml4.rs  table.rs  tlb.rs
kernel/arch/silicum-x86_64/: Cargo.toml
kernel/arch/silicum-x86_64/src/: cpu.rs  lib.rs  opcode.rs  serial.rs
kernel/arch/x86/: boot.c  cmos.c  exception.c  fpu.c  gdt.c  idt.c  interrupt.c  irq.c  paging.c  pic.c  pit.c  time.c  tss.c
kernel/arch/x86/asm/: cpu.asm  entry.asm  exception.asm  interruption.asm  irq.asm
kernel/config/aarch64/: aarch64.json  link.ld
kernel/config/i686/: i686.json  link.ld
kernel/config/x86_64/: link.ld  x86_64.json
kernel/core/: Makefile  date.c  elf.c  module.c  multiboot.c  preempt.c  startup.c  symbol.c  timer.c  ustar.c
kernel/core/mm/: context.c  malloc.c  page.c  paging.c  slub.c  vmalloc.c
kernel/crates/silicium-addr/: Cargo.toml
kernel/crates/silicium-addr/src/: frame.rs  lib.rs  phys.rs  virt.rs
kernel/crates/silicium-align/: Cargo.toml
kernel/crates/silicium-align/src/: lib.rs
kernel/crates/silicium-bitmap/: Cargo.toml
kernel/crates/silicium-bitmap/src/: lib.rs
kernel/crates/silicium-boot/: Cargo.toml
kernel/crates/silicium-boot/src/: allocator.rs  lib.rs  mmap.rs
kernel/crates/silicium-config/: Cargo.toml
kernel/crates/silicium-config/src/: lib.rs
kernel/crates/silicium-hal/: Cargo.toml
kernel/crates/silicium-hal-api/: Cargo.toml
kernel/crates/silicium-hal-api/src/: paging.rs
kernel/crates/silicium-hal/src/: lib.rs
kernel/crates/silicium-id/: Cargo.toml
kernel/crates/silicium-id/src/: lib.rs
kernel/crates/silicium-macros/: Cargo.toml
kernel/crates/silicium-macros/src/: lib.rs
kernel/crates/silicium-seqlock/: Cargo.toml
kernel/crates/silicium-seqlock/src/: lib.rs
kernel/crates/silicium-spin/: Cargo.toml
kernel/crates/silicium-spin/src/: lib.rs  lock.rs
kernel/crates/silicium-time/: Cargo.toml
kernel/crates/silicium-time/src/: lib.rs
kernel/crates/silicium-time/src/frequency/: hertz.rs  mod.rs
kernel/crates/silicium-time/src/unit/: millis.rs  mod.rs  nano.rs  second.rs
kernel/hal/: Makefile
kernel/hal/arch/x86/: boot.c  idt.c  pit.c
kernel/hal/arch/x86/asm/: entry.asm  exception.asm
kernel/hal/core/: startup.c
kernel/hal/core/mm/: malloc.c  page.c  slub.c  vmalloc.c
kernel/hal/include/: assert.h  kernel.h
kernel/hal/include/arch/x86/: gdt.h  idt.h  memory.h  pit.h
kernel/hal/include/core/mm/: context.h  malloc.h
kernel/hal/include/lib/: list.h  log.h  string.h
kernel/hal/lib/: list.c  memory.c  spinlock.c
kernel/include/: arch.h  assert.h  barrier.h  bindings.h  config.h  errno.h  kernel.h  module.h  multiboot.h  pointer.h
kernel/include/arch/x86/: cmos.h  cpu.h  exception.h  fpu.h  gdt.h  idt.h  io.h  irq.h  memory.h  paging.h  pic.h  pit.h  time.h  tss.h  types.h
kernel/include/core/: date.h  elf.h  module.h  preempt.h  symbol.h  timer.h  ustar.h
kernel/include/core/mm/: malloc.h  page.h  paging.h  slub.h  vmalloc.h
kernel/include/lib/: hashmap.h  log.h  maths.h  memory.h  spinlock.h  string.h
kernel/include/mm/: context.h  page.h  slub.h  vmalloc.h
kernel/include/process/: process.h  queue.h  schedule.h  thread.h
kernel/lib/: Makefile  hashmap.c  log.c  memory.c  panic.c  spinlock.c  string.c
kernel/mm/: Makefile  context.c  malloc.c  page.c  paging.c  slub.c  vmalloc.c
kernel/module/: Makefile  test.c
kernel/process/: Makefile  process.c  queue.c  schedule.c  thread.c
kernel/src/: lang.rs  main.rs  preempt.rs  prelude.rs  scheduler.rs
kernel/src/app/shell/: mod.rs  utils.rs
kernel/src/arch/: mod.rs
kernel/src/arch/hal/x86_64/: context.rs  date.rs  exception.rs  irq.rs  lang.rs  log.rs  mod.rs  paging.rs  percpu.rs  physical.rs  thread.rs  time.rs
kernel/src/arch/x86_64/: bump.rs  cmos.rs  context.rs  exception.rs  gdt.rs  idt.rs  io.rs  irq.rs  mod.rs  msr.rs  opcode.rs  percpu.rs  physical.rs  pic.rs  pit.rs  serial.rs  simd.rs  smp.rs  syscall.rs  thread.rs  tsc.rs  tss.rs
kernel/src/boot/: allocator.rs  mmap.rs  mod.rs
kernel/src/drivers/: fb.rs  kbd.rs  mod.rs  tty.rs
kernel/src/drivers/tty/: input.rs  mod.rs  renderer.rs
kernel/src/future/: executor.rs  io.rs  mod.rs  mutex.rs  sleep.rs  task.rs  thread.rs  timeout.rs  waker.rs
kernel/src/mm/: heap.rs  mod.rs
kernel/src/mm/physical/: allocator.rs  frame.rs  mod.rs
kernel/src/sys/: mod.rs  pid.rs  thread.rs  tid.rs
kernel/src/time/: instant.rs  mod.rs  timer.rs
kernel/src/user/: elf.rs  mod.rs  pid.rs  process.rs  scheduler.rs  sleep.rs  thread.rs  tid.rs
kernel/src/user/syscall/: mod.rs
(+58 files in other folders)
