[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*",
]

[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"
inline_asm_x86_att_syntax = "warn"
if_then_some_else_none = "warn"
pedantic = "warn"
all = "warn"

[workspace.dependencies]
seqlock = { path = "crates/silicium-seqlock", package = "silicium-seqlock" }
macros = { path = "crates/silicium-macros", package = "silicium-macros" }
bitmap = { path = "crates/silicium-bitmap", package = "silicium-bitmap" }
config = { path = "crates/silicium-config", package = "silicium-config" }
align = { path = "crates/silicium-align", package = "silicium-align" }
addr = { path = "crates/silicium-addr", package = "silicium-addr" }
spin = { path = "crates/silicium-spin", package = "silicium-spin" }
time = { path = "crates/silicium-time", package = "silicium-time" }
hal = { path = "crates/silicium-hal", package = "silicium-hal" }
id = { path = "crates/silicium-id", package = "silicium-id" }

arrayvec = { version = "0.7.4", default-features = false }
talc = { version = "4.3.1", features = ["counters"] }
static_assertions = "1.1.0"
zerocopy = "0.7.32"
bitfield = "0.14.0"
bitflags = "2.4.2"
tailcall = "1.0.1"
limine = "0.2"
log = "0.4.20"

[dependencies]
arrayvec = { workspace = true }
bitfield = { workspace = true }
bitflags = { workspace = true }
tailcall = { workspace = true }
zerocopy = { workspace = true }
seqlock = { workspace = true }
limine = { workspace = true }
macros = { workspace = true }
bitmap = { workspace = true }
config = { workspace = true }
align = { workspace = true }
addr = { workspace = true }
spin = { workspace = true }
talc = { workspace = true }
time = { workspace = true }
hal = { workspace = true }
log = { workspace = true }
id = { workspace = true }

[features]
default = ["panic_info", "logging"]

# Enable panic messages at the cost of increased binary size, but useful for debugging
panic_info = []

# Enable logging at the cost of reduced performance and increased binary size
logging = []

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
