[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*",
]

[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"
inline_asm_x86_att_syntax = "warn"
if_then_some_else_none = "warn"
pedantic = "warn"
all = "warn"

[workspace.dependencies]
seqlock = { path = "crates/silicium-seqlock", package = "silicium-seqlock" }
macros = { path = "crates/silicium-macros", package = "silicium-macros" }
bitmap = { path = "crates/silicium-bitmap", package = "silicium-bitmap" }
config = { path = "crates/silicium-config", package = "silicium-config" }
align = { path = "crates/silicium-align", package = "silicium-align" }
spin = { path = "crates/silicium-spin", package = "silicium-spin" }
hal = { path = "crates/silicium-hal", package = "silicium-hal" }
id = { path = "crates/silicium-id", package = "silicium-id" }

crossbeam = { version = "0.8.0", default-features = false, features = ["alloc"] }
futures = { version = "0.3.30", default-features = false, features = ["alloc"] }
arrayvec = { version = "0.7.4", default-features = false }
talc = { version = "4.3.1", features = ["counters"] }
elf = { version = "0.7.4", default-features = false }
static_assertions = "1.1.0"
zerocopy = "0.7.32"
bitfield = "0.15.0"
bitflags = "2.4.2"
tailcall = "1.0.1"
cfg-if = "1.0.0"
limine = "0.2"
log = "0.4.20"

[dependencies]
crossbeam = { workspace = true }
arrayvec = { workspace = true }
bitfield = { workspace = true }
bitflags = { workspace = true }
tailcall = { workspace = true }
zerocopy = { workspace = true }
futures = { workspace = true }
seqlock = { workspace = true }
limine = { workspace = true }
macros = { workspace = true }
bitmap = { workspace = true }
cfg-if = { workspace = true }
config = { workspace = true }
align = { workspace = true }
spin = { workspace = true }
talc = { workspace = true }
elf = { workspace = true }
hal = { workspace = true }
log = { workspace = true }
id = { workspace = true }

[features]
default = ["panic_info", "logging"]

# Enable panic messages at the cost of increased binary size, 
# but useful for debugging
panic_info = []

# Enable logging at the cost of reduced performance and increased
# binary size, but useful for debugging.
logging = []

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
