[package]
name = "silicium-hal"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_arch = "x86_64")'.dependencies]
arch = { path = "../silicium-x86_64", package = "silicium-x86_64" }

[dependencies]
spin = { workspace = true }
log = { workspace = true }

[features]
default = []
logging = []

[lints]
workspace = true

