[package]
name = "silicium-hal"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_arch = "x86_64")'.dependencies]
macros = { path = "../silicium-x86_64/macros", package = "macros" }
arch = { path = "../silicium-x86_64", package = "silicium-x86_64" }

[dependencies]
arrayvec = { workspace = true }
bitflags = { workspace = true }
limine = { workspace = true }
addr = { workspace = true }
boot = { workspace = true }
spin = { workspace = true }
log = { workspace = true }

[features]
default = []
panic_info = ["logging"]
logging = []

[lints]
workspace = true
