[package]
name = "silicium-x86_64"
version = "0.1.0"
edition = "2021"

[dependencies]
arch-macros = { path = "macros", package = "macros" }
bitfield = { workspace = true }
bitflags = { workspace = true }
tailcall = { workspace = true }
zerocopy = { workspace = true }
limine = { workspace = true }
macros = { workspace = true }
config = { workspace = true }
align = { workspace = true }
addr = { workspace = true }
boot = { workspace = true }
spin = { workspace = true }
time = { workspace = true }
log = { workspace = true }
hal = { workspace = true }

[lints]
workspace = true
